# StronglyConnectedComponentsProj

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: console_formatter.h  csv_formatter.h  get_rss.h  scc_reports.h
app/src/: get_rss.cpp  scc_app_main.cpp  scc_reports.cpp
cmake/: CodeCoverage.cmake
deliverables/coverage_stack/: README.md  generate_coverage.sh
deliverables/memory_profile/: SCCApp  profile_res.csv
deliverables/memory_rss/: SCCApp  plot_rss.py  rss.csv
deliverables/time_function/: README.md  SCCApp  generate_report.sh  importfile.m  report100.csv  report1000.csv  time_analysis.m
example/: CMakeLists.txt  main.cpp
libsccalgorithms/: CMakeLists.txt
libsccalgorithms/include/sccalgorithms/: scc_algorithm.h  scc_algorithms.h  scc_map_algorithms.hpp  scc_map_nuutila.hpp  scc_map_nuutila_iterative.hpp  scc_map_pearce.hpp  scc_map_pearce_iterative.hpp  scc_map_tarjan.hpp  scc_utils.h
libsccalgorithms/src/: scc_algorithms.cpp  scc_algorithms_nuutila.cpp  scc_algorithms_pearce.cpp  scc_algorithms_tarjan.cpp  scc_utils.cpp
libsccalgorithms/src/iterative/: scc_algorithms_nuutila1_iterative.cpp  scc_algorithms_nuutila2_iterative.cpp  scc_algorithms_nuutila_iterative.cpp  scc_algorithms_pearce_iterative.cpp
libsccalgorithms/test/: CMakeLists.txt
libsccalgorithms/test/src/: scc_algorithms_test_boost.cpp
test/: CMakeLists.txt  scc_test_boostscc.cpp
